added sensor values in index page

--- a/app/templates/dashboard_layout.html
+++ b/app/templates/dashboard_layout.html
@@ -23,7 +23,12 @@
   <link href="{{url_for('static', filename='css/style-responsive.css')}}" rel="stylesheet">
   <script src="{{url_for('static', filename='lib/jquery/jquery.min.js')}}"></script>
 
-
+  <style type="text/css">
+    
+    .text-white {
+        color: white !important;
+    }
+  </style>
 {% block initialscripts %} {%endblock%}
 
   </head>
