--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -128,15 +128,49 @@
             </div>
 
 
+            <div id="sensor-data" class="mb">
+              <div class="panel green-panel p-2">
+                <table class="table mt-2" style="color:black" > 
+                  <thead>
+                    <th class="text-center">sensor id</th>
+                    <th class="text-center">type</th>
+                    <th class="text-center">value</th>
+                    <th class="text-center">timestamp</th>
+                  </thead>
+                  {% for sensor_data in data %}
+                  <tr>
+                    <td>{{ sensor_data.sensor_id}}</td>
+                    {% if sensor_data.type=="h"%}
+                      <td>humidity</td>
+                    {% elif sensor_data.type=="t"%}
+                      <td>temperature</td>
+                    {% elif sensor_data.type=="g"%}
+                      <td>gas</td>
+                    {% else %}
+                      <td>-</td>
+                    {%endif%}
+
+                    <td>{{ sensor_data.value}}</td>
+                    <td>{{ sensor_data.timestamp}}</td>
+                  </tr>
+                  {% endfor %}
+                </table>
+
+
+                </table>
+              </div>
+            </div>
+
              <!-- CALENDAR-->
-            <div id="calendar" class="mb">
+             <!-- Maybe for future, remove display;none -->
+            <div id="calendar" class="mb" style="display: none">
               <div class="panel green-panel no-margin">
                 <div class="panel-body">
                   <div id="date-popover" class="popover top" style="cursor: pointer; disadding: block; margin-left: 33%; margin-top: -50px; width: 175px;">
                     <div class="arrow"></div>
                     <h3 class="popover-title" style="disadding: none;"></h3>
                     <div id="date-popover-content" class="popover-content"></div>
-                  </div>
+                  </div>--
                   <div id="my-calendar"></div>
                 </div>
               </div>
