--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,14 @@
 
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ['0', 'Temperature'],
-          ['0',  1000],
-          ['0',  1170],
-          ['0',  660],
-          ['0',  1030]
+          ['-', 'Temperature'],
+          ['°C',  20],
+          ['°C',  10],
+          ['°C',  20],
+          ['°C',  10],
+          ['°C', 30],
+          ['°C', 50],
+          ['°C', 45]
         ]);
         var options = {
           curveType: 'function',
@@ -40,11 +43,13 @@
 
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ['0', 'Humidity'],
-          ['0',  1000],
-          ['0',  1170],
-          ['0',  660],
-          ['0',  1030]
+          ['-', 'Humidity'],
+          ['%',  20],
+          ['%',  10],
+          ['%',  20],
+          ['%',  50],
+          ['%', 70],
+          ['%', 80]
         ]);
 
         var options = {
@@ -66,11 +71,12 @@
 
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ['0', 'Gas'],
-          ['0',  1000],
-          ['0',  1170],
-          ['0',  660],
-          ['0',  1030]
+          ['', 'Gas'],
+          ['',  60],
+          ['',  40],
+          ['',  40],
+          ['',  60],
+          ['', 80]
         ]);
 
         var options = {
