--- a/app/templates/dashboard_layout.html
+++ b/app/templates/dashboard_layout.html
@@ -7,6 +7,8 @@
   <meta name="description" content="">
   <meta name="author" content="Dashboard">
   <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+{% block metas %} {%endblock%}
+
   <title>On Fire</title>
 
   <!-- Favicons -->
